iPhone-specific mobile web fixes/improvements
- Fixed viewport scaling to work in both landscape and portrait mode
- Replaced "apple-mobile-web-app-capable" meta tag, which does nothing, with "apple-mobile-web-app-capable". This enables a full-screen browsing experience (no nav bars or HUD) when site is accessed via a bookmark on the home screen.
- Added a 57x57 icon with a US flag on it to serve as the home screen bookmark icon (apple-touch-icon.png).
- Added fallback font family to comply with good CSS practices (in case Helvetica is unavailable)
- Shortened site title to fit iPhone's 12 char maximum to avoid truncation
- Removed user-scalability allowance, as that is not the best way to go about fixing underlying design problem with SAYT input widget.

--- a/public/stylesheets/mobile_iphone.css
+++ b/public/stylesheets/mobile_iphone.css
@@ -6,9 +6,8 @@ body, html, div, span, img, p, h1, h2, h3 {
 }
 
 body {
-    width: 320px;
     background: #c5ccd3;
-    font-family: "Helvetica";
+    font-family: "Helvetica", sans-serif;
     font-size: 17px;
     font-weight: normal;
     word-wrap: break-word;
